--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,15 @@
 #Tweather h4 {
   padding-right: 12px;
 }
+@media(min-width:769px){
+
+}
+@media(max-width:769px) {
+  .mobile {
+    width: 100%;
+  }
+  .Trmw{
+    width: 100%;
+    overflow-x:auto;
+}
+}
